--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
         <div>
             <label for="valor">Valor do produto</label>
-            <input type="number" id="valor" name="valor" min="0" placeholder="ex... 2500,90" autocomplete="off" required>
+            <input type="number" id="valor" name="valor" min="0" placeholder="ex... 2500,90" autocomplete="off" required stpe="00000000.01">
         </div>
 
         <div>
