--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
             box-shadow: 1px 1px 20px black,
                 -1px -1px 20px black;
             transition: transform 2s ease;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
         }
 
         .card:hover {
@@ -120,6 +123,7 @@
 
             .card {
                 width: 100%;
+                font-size: .9rem;
             }
 
         }
